--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -1,24 +1,14 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/luisbdiaz/FocusIA/blob/main/fooocus_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "VjYy0F2gZIPR",
+        "outputId": "51bb7604-d4bf-47e5-bc2a-31eae903b0d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e8a5f41a-1fce-4de1-9d3d-d29e16c3a9fd"
+        }
       },
       "outputs": [
         {
@@ -30,7 +20,7 @@
             "Requirement already satisfied: cffi>=1.16.0 in /usr/local/lib/python3.11/dist-packages (from pygit2==1.15.1) (1.17.1)\n",
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.11/dist-packages (from cffi>=1.16.0->pygit2==1.15.1) (2.22)\n",
             "Downloading pygit2-1.15.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (5.1 MB)\n",
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/5.1 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.6/5.1 MB\u001b[0m \u001b[31m20.1 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m79.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m53.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m35.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: pygit2\n",
             "  Attempting uninstall: pygit2\n",
             "    Found existing installation: pygit2 1.17.0\n",
@@ -43,8 +33,8 @@
             "remote: Counting objects: 100% (4/4), done.\u001b[K\n",
             "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
             "remote: Total 6725 (delta 2), reused 0 (delta 0), pack-reused 6721 (from 2)\u001b[K\n",
-            "Receiving objects: 100% (6725/6725), 33.26 MiB | 25.75 MiB/s, done.\n",
-            "Resolving deltas: 100% (3878/3878), done.\n",
+            "Receiving objects: 100% (6725/6725), 33.27 MiB | 27.14 MiB/s, done.\n",
+            "Resolving deltas: 100% (3875/3875), done.\n",
             "/content/Fooocus\n",
             "Already up-to-date\n",
             "Update succeeded.\n",
@@ -57,63 +47,46 @@
             "[Cleanup] Cleanup successful\n",
             "Downloading: \"https://huggingface.co/lllyasviel/misc/resolve/main/xlvaeapp.pth\" to /content/Fooocus/models/vae_approx/xlvaeapp.pth\n",
             "\n",
-            "100% 209k/209k [00:00<00:00, 9.08MB/s]\n",
+            "100% 209k/209k [00:00<00:00, 5.58MB/s]\n",
             "Downloading: \"https://huggingface.co/lllyasviel/misc/resolve/main/vaeapp_sd15.pt\" to /content/Fooocus/models/vae_approx/vaeapp_sd15.pth\n",
             "\n",
-            "100% 209k/209k [00:00<00:00, 9.36MB/s]\n",
+            "100% 209k/209k [00:00<00:00, 5.11MB/s]\n",
             "Downloading: \"https://huggingface.co/mashb1t/misc/resolve/main/xl-to-v1_interposer-v4.0.safetensors\" to /content/Fooocus/models/vae_approx/xl-to-v1_interposer-v4.0.safetensors\n",
             "\n",
-            "100% 5.40M/5.40M [00:00<00:00, 85.4MB/s]\n",
+            "100% 5.40M/5.40M [00:00<00:00, 50.2MB/s]\n",
             "Downloading: \"https://huggingface.co/lllyasviel/misc/resolve/main/fooocus_expansion.bin\" to /content/Fooocus/models/prompt_expansion/fooocus_expansion/pytorch_model.bin\n",
             "\n",
-            "100% 335M/335M [00:01<00:00, 185MB/s]\n",
+            "100% 335M/335M [00:01<00:00, 222MB/s]\n",
             "Downloading: \"https://huggingface.co/lllyasviel/fav_models/resolve/main/fav/juggernautXL_v8Rundiffusion.safetensors\" to /content/Fooocus/models/checkpoints/juggernautXL_v8Rundiffusion.safetensors\n",
             "\n",
-            "100% 6.62G/6.62G [00:36<00:00, 194MB/s]\n",
+            "100% 6.62G/6.62G [00:49<00:00, 143MB/s]\n",
             "Downloading: \"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_offset_example-lora_1.0.safetensors\" to /content/Fooocus/models/loras/sd_xl_offset_example-lora_1.0.safetensors\n",
             "\n",
-            "100% 47.3M/47.3M [00:00<00:00, 247MB/s]\n",
-            "Total VRAM 15095 MB, total RAM 12979 MB\n",
-            "Set vram state to: HIGH_VRAM\n",
-            "Always offload VRAM\n",
-            "Device: cuda:0 Tesla T4 : native\n",
-            "VAE dtype: torch.float32\n",
-            "Using pytorch cross attention\n",
-            "Refiner unloaded.\n",
-            "IMPORTANT: You are using gradio version 3.41.2, however version 4.44.1 is available, please upgrade.\n",
-            "--------\n",
-            "Running on local URL:  http://127.0.0.1:7865\n",
-            "Running on public URL: https://f62926c2a8b4fbe84d.gradio.live\n",
-            "\n",
-            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n",
-            "model_type EPS\n",
-            "UNet ADM Dimension 2816\n",
-            "Using pytorch attention in VAE\n",
-            "Working with z of shape (1, 4, 32, 32) = 4096 dimensions.\n",
-            "Using pytorch attention in VAE\n",
-            "extra {'cond_stage_model.clip_l.logit_scale', 'cond_stage_model.clip_l.text_projection'}\n",
-            "left over keys: dict_keys(['cond_stage_model.clip_l.transformer.text_model.embeddings.position_ids'])\n",
-            "loaded straight to GPU\n",
-            "Requested to load SDXL\n",
-            "Loading 1 new model\n",
-            "Base model loaded: /content/Fooocus/models/checkpoints/juggernautXL_v8Rundiffusion.safetensors\n",
-            "VAE loaded: None\n",
-            "Request to load LoRAs [('sd_xl_offset_example-lora_1.0.safetensors', 0.1)] for model [/content/Fooocus/models/checkpoints/juggernautXL_v8Rundiffusion.safetensors].\n",
-            "Loaded LoRA [/content/Fooocus/models/loras/sd_xl_offset_example-lora_1.0.safetensors] for UNet [/content/Fooocus/models/checkpoints/juggernautXL_v8Rundiffusion.safetensors] with 788 keys at weight 0.1.\n",
-            "Fooocus V2 Expansion: Vocab with 642 words.\n",
-            "Fooocus Expansion engine loaded for cuda:0, use_fp16 = True.\n",
-            "Requested to load SDXLClipModel\n",
-            "Requested to load GPT2LMHeadModel\n",
-            "Loading 2 new models\n",
-            "[Fooocus Model Management] Moving model(s) has taken 0.62 seconds\n",
-            "2025-03-17 05:12:33.573190: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-            "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-            "E0000 00:00:1742188353.841382    1379 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-            "E0000 00:00:1742188353.914928    1379 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-            "2025-03-17 05:12:34.511571: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-            "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-            "Started worker with PID 337\n",
-            "App started successful. Use the app with http://127.0.0.1:7865/ or 127.0.0.1:7865 or https://f62926c2a8b4fbe84d.gradio.live\n"
+            "100% 47.3M/47.3M [00:00<00:00, 204MB/s]\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/Fooocus/entry_with_update.py\", line 46, in <module>\n",
+            "    from launch import *\n",
+            "  File \"/content/Fooocus/launch.py\", line 152, in <module>\n",
+            "    from webui import *\n",
+            "  File \"/content/Fooocus/webui.py\", line 10, in <module>\n",
+            "    import modules.async_worker as worker\n",
+            "  File \"/content/Fooocus/modules/async_worker.py\", line 3, in <module>\n",
+            "    from extras.inpaint_mask import generate_mask_from_image, SAMOptions\n",
+            "  File \"/content/Fooocus/extras/inpaint_mask.py\", line 6, in <module>\n",
+            "    from extras.GroundingDINO.util.inference import default_groundingdino\n",
+            "  File \"/content/Fooocus/extras/GroundingDINO/util/inference.py\", line 3, in <module>\n",
+            "    import ldm_patched.modules.model_management as model_management\n",
+            "  File \"/content/Fooocus/ldm_patched/modules/model_management.py\", line 121, in <module>\n",
+            "    total_vram = get_total_memory(get_torch_device()) / (1024 * 1024)\n",
+            "                                  ^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/Fooocus/ldm_patched/modules/model_management.py\", line 90, in get_torch_device\n",
+            "    return torch.device(torch.cuda.current_device())\n",
+            "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/torch/cuda/__init__.py\", line 971, in current_device\n",
+            "    _lazy_init()\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/torch/cuda/__init__.py\", line 319, in _lazy_init\n",
+            "    torch._C._cuda_init()\n",
+            "RuntimeError: Found no NVIDIA driver on your system. Please check that you have an NVIDIA GPU and installed a driver from http://www.nvidia.com/Download/index.aspx\n"
           ]
         }
       ],
@@ -130,8 +103,7 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
